<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>es.uvigo.ei.sing</groupId>
	<artifactId>s2p</artifactId>
	<version>1.2.0-SNAPSHOT</version>

	<name>S2P</name>
	<description>Spot to protein analysis tool.</description>
	<inceptionYear>2016</inceptionYear>
	<url>http://www.sing-group.org/s2p</url>
	<packaging>pom</packaging>

	<modules>
		<module>s2p-core</module>
		<module>s2p-gui</module>
		<module>s2p-aibench</module>
	</modules>

	<licenses>
		<license>
			<name>GNU GENERAL PUBLIC LICENSE, Version 3</name>
			<url>http://www.gnu.org/licenses/gpl.html</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<developers>
		<developer>
			<name>Miguel Reboiro-Jato</name>
			<organization>SING Group - Universidade de Vigo</organization>
			<organizationUrl>http://www.sing-group.org/</organizationUrl>
			<email>mrjato@uvigo.es</email>
		</developer>
		<developer>
			<name>Hugo López-Fernández</name>
			<organization>SING Group - Universidade de Vigo</organization>
			<organizationUrl>http://www.sing-group.org/</organizationUrl>
			<email>hlfernandez@uvigo.es</email>
		</developer>
		<developer>
			<name>Daniel Glez-Peña</name>
			<organization>SING Group - Universidade de Vigo</organization>
			<organizationUrl>http://www.sing-group.org/</organizationUrl>
			<email>dgpena@uvigo.es</email>
		</developer>
	</developers>

	<contributors>	
		<contributor>
			<name>José Luis Capelo Martínez</name>
			<organization>Bioscope Group - Universidade Nova de Lisboa</organization>
			<organizationUrl>http://www.bioscopegroup.org/</organizationUrl>
			<email>jlcm@fct.unl.pt</email>
			<roles>
				<role>Researcher</role>
			</roles>
		</contributor>
		<contributor>
			<name>José Eduardo Araújo</name>
			<organization>Bioscope Group - Universidade Nova de Lisboa</organization>
			<organizationUrl>http://www.bioscopegroup.org/</organizationUrl>
			<email>jeduardoaraujo@bioscopegroup.org</email>
			<roles>
				<role>Researcher</role>
			</roles>
		</contributor>		
		<contributor>
			<name>Florentino Fdez-Riverola</name>
			<organization>SING Group - Universidade de Vigo</organization>
			<organizationUrl>http://www.sing-group.org/</organizationUrl>
			<email>riverola@uvigo.es</email>
			<roles>
				<role>Researcher</role>
			</roles>
		</contributor>
	</contributors>
	
	<properties>
		<!-- General -->
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

		<!-- License configuration -->
		<license.licenseName>gpl_v3</license.licenseName>
		<license.copyrightOwners>José Luis Capelo Martínez, José Eduardo Araújo, Florentino Fdez-Riverola, Miguel
			Reboiro-Jato, Hugo López-Fernández, and Daniel Glez-Peña</license.copyrightOwners>
		<license.organizationName>Bioscope Group (Universidade Nova de Lisboa) and SING
			Group (Universidade de Vigo)</license.organizationName>
		<license.addJavaLicenseAfterPackage>false</license.addJavaLicenseAfterPackage>
		
		<!-- Plugins dependencies -->
		<license-maven-plugin.version>1.8</license-maven-plugin.version>
		<maven-resources-plugin.version>2.7</maven-resources-plugin.version>
		<maven-dependency-plugin.version>2.1</maven-dependency-plugin.version>
		<maven-antrun-plugin.version>1.7</maven-antrun-plugin.version>
		<maven-assembly-plugin.version>2.2</maven-assembly-plugin.version>
		<maven-jar-plugin.version>2.6</maven-jar-plugin.version>	
		<download-maven-plugin.version>1.2.1</download-maven-plugin.version>
		
		<!-- General dependencies -->
		<jsoup.version>1.8.3</jsoup.version>
		<aibench.version>2.9.0</aibench.version>
		<swingx.version>1.6.5-1</swingx.version>
		<charts4j.version>1.3</charts4j.version>
		<jvenndiagram.version>1.1.0</jvenndiagram.version>
		<gc4s.version>0.7.0</gc4s.version>
		<commons.math.version>3.6.1</commons.math.version>
		<jfreechart.version>1.0.19</jfreechart.version>
		<sing.commons.csv.version>1.2.0</sing.commons.csv.version>
		<sing.commons.math.version>0.1.0</sing.commons.math.version>
		<itextpdf.version>5.5.10</itextpdf.version>
		<jsparklines-factory.version>0.1.0</jsparklines-factory.version>
		<aibench-plugin-recent-files-history.version>1.0.1</aibench-plugin-recent-files-history.version>

		<!-- Testing dependencies -->
		<junit.version>4.8.2</junit.version>
		<java-hamcrest.version>2.0.0.0</java-hamcrest.version>
		
		<!-- AIBench configuration -->		
		<aibench.lib.artifactIds>javatar,aibench-aibench,jhall,log4j</aibench.lib.artifactIds>
		<aibench.plugins.artifactIds>aibench-core,aibench-workbench,aibench-plugin-recent-files-history</aibench.plugins.artifactIds>

		<!-- Java resources for assemblies -->
		<jir.windows.64b>${project.build.directory}/java-installer-resources/windows/64b/jre1.8.0_111</jir.windows.64b>
		<jir.windows.32b>${project.build.directory}/java-installer-resources/windows/32b/jre1.8.0_111</jir.windows.32b>
		<jir.linux.64b>${project.build.directory}/java-installer-resources/linux/64b/jre1.8.0_111</jir.linux.64b>
		<jir.linux.32b>${project.build.directory}/java-installer-resources/linux/32b/jre1.8.0_111</jir.linux.32b>
		<jir.mac>${project.build.directory}/java-installer-resources/mac/jre1.8.0_111</jir.mac>

		<should.skip.distributable>true</should.skip.distributable>
		<should.skip.download>true</should.skip.download>
		<project.builds.directory>${project.build.directory}/builds</project.builds.directory>
	</properties>
	
	<repositories>
		<repository>
			<id>sing-repository</id>
			<name>SING repository</name>
			<url>http://maven.sing-group.org/repository/maven/</url>
		</repository>
	</repositories>
	
	<dependencyManagement>
		<dependencies>
			<!-- Modules -->
			<dependency>
				<groupId>es.uvigo.ei.sing</groupId>
				<artifactId>s2p-core</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>es.uvigo.ei.sing</groupId>
				<artifactId>s2p-gui</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>es.uvigo.ei.sing</groupId>
				<artifactId>s2p-aibench</artifactId>
				<version>${project.version}</version>
			</dependency>

			<!-- General -->
			<dependency>
			    <groupId>org.jsoup</groupId>
			    <artifactId>jsoup</artifactId>
			    <version>${jsoup.version}</version>
			</dependency>			
			<dependency>
				<groupId>org.swinglabs.swingx</groupId>
				<artifactId>swingx-all</artifactId>
				<version>${swingx.version}</version>
			</dependency>		
			<dependency>
				<groupId>com.googlecode.charts4j</groupId>
				<artifactId>charts4j</artifactId>
				<version>${charts4j.version}</version>
			</dependency>
			<dependency>
				<groupId>es.uvigo.ei.sing</groupId>
				<artifactId>venn-diagram-assistant</artifactId>
				<version>${jvenndiagram.version}</version>
			</dependency>			
			<dependency>
				<groupId>org.sing_group</groupId>
				<artifactId>gc4s</artifactId>
				<version>${gc4s.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-math3</artifactId>
				<version>${commons.math.version}</version>
			</dependency>
			<dependency>
				<groupId>org.jfree</groupId>
				<artifactId>jfreechart</artifactId>
				<version>${jfreechart.version}</version>
			</dependency>
			<dependency>
				<groupId>es.uvigo.ei.sing</groupId>
				<artifactId>commons-csv</artifactId>
				<version>${sing.commons.csv.version}</version>			
			</dependency>
			<dependency>
				<groupId>es.uvigo.ei.sing</groupId>
				<artifactId>math</artifactId>
				<version>${sing.commons.math.version}</version>
			</dependency>
			<dependency>
			    <groupId>com.itextpdf</groupId>
			    <artifactId>itextpdf</artifactId>
			    <version>${itextpdf.version}</version>
			</dependency>
			<dependency>
				<groupId>org.sing_group</groupId>
				<artifactId>jsparklines-factory</artifactId>
				<version>${jsparklines-factory.version}</version>
				<exclusions>
					<exclusion>
						<groupId>org.swinglabs</groupId>
						<artifactId>swingx</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>es.uvigo.ei.sing</groupId>
				<artifactId>aibench-aibench</artifactId>
				<version>${aibench.version}</version>
				<scope>compile</scope>
			</dependency>
			<dependency>
				<groupId>es.uvigo.ei.sing</groupId>
				<artifactId>aibench-shell</artifactId>
				<version>${aibench.version}</version>
			</dependency>
			<dependency>
				<groupId>es.uvigo.ei.sing</groupId>
				<artifactId>aibench-core</artifactId>
				<version>${aibench.version}</version>
				<exclusions>
					<exclusion>
						<groupId>*</groupId>
						<artifactId>*</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>es.uvigo.ei.sing</groupId>
				<artifactId>aibench-workbench</artifactId>
				<version>${aibench.version}</version>
				<exclusions>
					<exclusion>
						<groupId>*</groupId>
						<artifactId>*</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>org.sing_group</groupId>
				<artifactId>aibench-plugin-recent-files-history</artifactId>
				<version>${aibench-plugin-recent-files-history.version}</version>
				<exclusions>
					<exclusion>
						<groupId>*</groupId>
						<artifactId>*</artifactId>
					</exclusion>
				</exclusions>
			</dependency>

			<!-- Testing -->
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>${junit.version}</version>
			</dependency>
			<dependency>
			    <groupId>org.hamcrest</groupId>
			    <artifactId>java-hamcrest</artifactId>
			    <version>${java-hamcrest.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
	
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<version>${maven-resources-plugin.version}</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>${maven-dependency-plugin.version}</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>${maven-assembly-plugin.version}</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-antrun-plugin</artifactId>
				<version>${maven-antrun-plugin.version}</version>
			</plugin>
			<plugin>
				<groupId>com.googlecode.maven-download-plugin</groupId>
				<artifactId>download-maven-plugin</artifactId>
				<version>${download-maven-plugin.version}</version>
			</plugin>			
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>license-maven-plugin</artifactId>
				<version>${license-maven-plugin.version}</version>
				<configuration>
					    <excludes>
						<exclude>**/assembly/*.xml</exclude>
						<exclude>**/*scripts/*.sh</exclude>
						<exclude>**/dist-scripts/*.sh</exclude>
						<exclude>**/*.htm</exclude>
						<exclude>**/*.HTM</exclude>
						<exclude>**/*.properties</exclude>
					    </excludes>
				</configuration>
			</plugin>
			<plugin>
				<!-- Allows using test classes in other projects -->
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>${maven-jar-plugin.version}</version>
			</plugin>
		</plugins>
	</build>
</project>
